# ProLM

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  simulated_data.csv
fine tuning/: Fine-tuning_code.py  Integration_multiple_models.py  cluster_tsne.py  disease_subtype_classification.py  expression_trajectory.py  fine_tuning.py
pretraining/: ProLM_Pretrain_Code.py  ProLM_pre-training.py  ProteinBERT.py  protein_importance_ProLM_pretraining.csv  protein_sequences.csv
scripts/: extract_proteinbert_embeddings.py  generate_synthetic_data.py
src/prolm/: __init__.py  data.py  finetune.py  model.py
